# Hash-Miner

./: README.md  pyproject.toml
src/hash_miner/: config.py  main.py  types.py
src/hash_miner/chain/: contract_adapter.py
src/hash_miner/gpu/: __init__.py  engine.py  kernel.cu
src/hash_miner/mining/: benchmark.py  challenge.py  native_backend.py  worker.py
src/hash_miner/runtime/: miner.py  stats.py
tests/: test_challenge_encoding.py
