[project]
name = "hash-miner"
version = "0.2.0"
description = "HASH miner with CUDA GPU engine"
requires-python = ">=3.11"
dependencies = [
  "web3>=7.0.0",
  "pycryptodome>=3.20.0",
  "cupy-cuda12x>=13.0.0",
  "numpy>=1.26",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
